--- a/0x00-html_advanced/21-index.html
+++ b/0x00-html_advanced/21-index.html
@@ -182,11 +182,9 @@
     <br />
     <!-- Footer -->
     <footer>
-      <div>
-        <a href="https://www.facebook.com/alxafrica/">Facebook</a>
-        <a href="https://twitter.com/alx_africa/">Twitter</a>
-        <a href="https://www.instagram.com/alx_africa/">Instagram</a>
-      </div>
+      <a href="https://www.facebook.com/alxafrica/">Facebook</a>
+      <a href="https://twitter.com/alx_africa">Twitter</a>
+      <a href="https://www.instagram.com/alx_africa/">Instagram</a>
     </footer>
   </body>
 </html>
