--- a/0x00-html_advanced/31-index.html
+++ b/0x00-html_advanced/31-index.html
@@ -206,8 +206,7 @@
     <br />
     <!-- Footer -->
     <footer>
-      234 Washington Street <br />
-      Urbana, Illinois
+      234 Washington Street<br />Urbana, Illinois
       <div>
         <ul>
           <li><a href="https://www.facebook.com/alxafrica/">Facebook</a></li>
