--- a/0x00-html_advanced/38-styleguide.html
+++ b/0x00-html_advanced/38-styleguide.html
@@ -184,10 +184,12 @@
 
       <!-- Video -->
       <section>
-        <header><h2>Video</h2></header>
+        <header>
+          <h2>Video</h2>
+        </header>
         <video
-          loop
           controls
+          loop
           poster="https://intranet-projects-files.s3.amazonaws.com/webstack/thumbnail.jpg">
           <source
             src="https://intranet-projects-files.s3.amazonaws.com/webstack/BigBuckBunny.mp4"
