--- a/0x00-html_advanced/16-index.html
+++ b/0x00-html_advanced/16-index.html
@@ -131,7 +131,7 @@
           <header>
             <h2>Testimonials</h2>
             <p>We are more than a digital company</p>
-          </heade>
+          </header>
           <div>
             <article>Testimonial 1</article>
             <article>Testimonial 2</article>
