--- a/0x00-html_advanced/31-index.html
+++ b/0x00-html_advanced/31-index.html
@@ -210,7 +210,7 @@
       <div>
         <ul>
           <li><a href="https://www.facebook.com/alxafrica/">Facebook</a></li>
-          <li><a href="https://twitter.com/alx_africa/">Twitter</a></li>
+          <li><a href="https://twitter.com/alx_africa">Twitter</a></li>
           <li><a href="https://www.instagram.com/alx_africa/">Instagram</a></li>
         </ul>
       </div>
